# Joint-Face-Detection-and-Alignment

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dataiter.py  demo.py  demo.txt  detect.py  fddb.py  main.cpp  model.py  summary.md  train.py  train.sh
cpp/: CMakeLists.txt  README.md  convert.sh  jfda.cpp  jfda.hpp  main.cpp  video.cpp
cpp/profile/: README.md  profile-big-lnet-optim-caffe.json  profile-big-lnet-unoptim-caffe.json  profile-small-lnet-optim-caffe.json  profile-small-lnet-unoptim-caffe.json
data/: config.py  extract_wider_face.m  fetcher.py  p.py  ro.py  show_db.py  utils.py
fddb/: caffe-mtcnn-onet-24DiscROC.txt  caffe-mtcnn-rnet-24DiscROC.txt  fddb-a.plt  fddb-a.txt  fddb-b.plt  fddb-b.txt  fddb-onet.plt  fddb-pnet.plt  fddb-rnet.plt  jfda-onet-24DiscROC.txt  jfda-rnet-24DiscROC.txt  mx-mtcnn-onet24-DiscROC.txt  mx-mtcnn-rnet24-DiscROC.txt
jfda/: __init__.py  bbox.pyx  config.py  detector.py  lnet.py  mdetector.py  minibatch.py  prepare.py  train.py  utils.py
layers/: caffe.proto  copy.sh  data_fetcher.py  data_layer.py  jfda_data_layer.py  jfda_loss_layer.cpp  jfda_loss_layer.cu  jfda_loss_layer.hpp  mask_identity_layer.cpp  mask_identity_layer.cu  mask_identity_layer.hpp  test_jfda_loss_layer.cpp  test_mask_identity_layer.cpp
model/: l.caffemodel  o.caffemodel  p.caffemodel  r.caffemodel
mxnet/: convert.py  demo.py  model.py
operator/: mask_identity-inl.h  mask_identity.cc  mask_identity.cu  test_op.py
proto/: l.prototxt  l_solver.prototxt  l_train_val.prototxt  o.prototxt  o_solver.prototxt  o_train_val.prototxt  p.prototxt  p_solver.prototxt  p_train_val.prototxt  r.prototxt  r_solver.prototxt  r_train_val.prototxt
scripts/: benchmark_lmdb_access.py  detect.py  dump_wider_path.py  kill.sh  score_distribute.py  show_db.py
src/: detect.cpp  detector.cpp  detector.hpp  fddb.cpp  jfda.cpp  jfda.hpp  main.cpp  wider.cpp
